# chrono-collision-test

./: CMakeLists.txt  README.md  demo_MBS_convexhullChBodyEasySMC.cpp  demo_MBS_convexhullSMC.cpp  demo_MBS_fallingbox.cpp  demo_MBS_fallingboxNSC.cpp  demo_MBS_fallingboxSMC.cpp  my_example.cpp
chrono_test/: CMakeLists.txt
data/stl/: FallingBox.stl  Ground.stl
test_cgal/: CMakeLists.txt  demo_CGAL_minkowski_sum.cpp
test_chrono/: CMakeLists.txt  demo_MBS_fallingboxSMC.cpp
